<resources>
    <string name="app_name">ReplicaRozeepk</string>
    <string name="email">Email</string>
    <string name="Jtwithcolon">Job Title :</string>
    <string name="skillwcolon">Skills :</string>
    <string name="salarywcolon">Salary Range :</string>
    <string name="datewcolon">Date :</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="applied_jobs">Applied Jobs</string>
    <string name="view_matched_jobs">View Matched Jobs</string>
    <string name="sign_up_small">Sign up</string>
    <string name="create_account_as">Create account as</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="employer">Employer</string>
    <string name="cancel">Cancel</string>
    <string name="cancelcpital">CANCEL</string>
    <string name="company_name">Company Name</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="upload_image">Upload Image</string>
    <string name="create">CREATE</string>
    <string name="name">Name</string>
    <string name="adress">Adress</string>
    <string name="job_title">Job Title</string>
    <string name="skills">Skills</string>
    <string name="expected_salary">Expected Salary</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="how_do_you_want_to_set_your_photo">How do you want to set your photo?</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="edit">EDIT</string>
    <string name="update">UPDATE</string>
    <string name="Postjob">Post Job</string>
    <string name="viewpostedjobs">VIEW POSTED JOBS</string>
    <string name="exit">EXIT</string>
    <string name="exitsmall">Exit</string>
    <string name="areusure">Are you sure you want to quit?</string>
    <string name="companyprofile">Company Profile</string>
    <string name="city">City</string>
    <string name="postajob">Post A Job</string>
    <string name="logout">Logout</string>
    <string name="signout">Sign Out</string>
    <string name="salary_range">Salary Range</string>
    <string name="postjob">Post Job</string>
    <string name="postthisjob">Post This Job</string>
    <string name="Postanewjob">Post A New Job</string>
    <string name="areusurex">Are you sure you want to signout?</string>
    <string name="published">PUBLISHED</string>
    <string name="applyby">APPLY BY</string>
    <string name="success">Success</string>
    <string name="successmessage">You have successfully applied for this job.</string>
    <string name="ok">OK</string>
    <string name="sorry">Sorry</string>
    <string name="leveluptext">You can not apply for this job.</string>
    <string name="company">Company</string>
    <string name="setStatus">Set Status</string>
    <string name="Confirm">Confirm Password</string>
    <string name="question">Question: What is OOP?</string>
    <string name="opt1">Option 1</string>
    <string name="job_answer">Answer</string>
    <string name="addquestions">Add Question</string>
    <string name="Question">Question</string>
    <string name="opta">Option A</string>
    <string name="optb">Option B</string>
    <string name="optc">Option C</string>
    <string name="optd">Option D</string>
    <string name="answer">Answer</string>
    <string name="addtoquiz">Add to Quiz</string>
    <string name="viewquiz">View Quiz</string>
    <string name="addquiz">Add quiz</string>
    <string name="showquiz">Show quiz</string>
    <string name="attemptquiz">Attempt Quiz</string>
    <string name="score">Score: 0</string>
    <string name="Confirmans">Confirm</string>
    <string name="filter">Apply Filter</string>
</resources>