<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvupload"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_photo"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvuploadtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
          android:layout_marginLeft="10dp"
            android:text="@string/how_do_you_want_to_set_your_photo"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvcamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:layout_marginTop="100dp"
            android:textColor="#0B84E4"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="135dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvgallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:textSize="18sp"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="100dp"
            android:textColor="#0B84E4"/>

    </androidx.cardview.widget.CardView>
