<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/choicecardview">

        <LinearLayout
            android:id="@+id/choicelinearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            
            <TextView

                android:text="@string/sign_up_small"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account_as"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/jobseeker_textview_choice"
                android:text="@string/job_seeker"
                android:textAlignment="center"
                android:textSize="30sp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:textColor="@color/green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/employer_textview_choice"
                android:text="@string/employer"
                android:textSize="30sp"
                android:textColor="@color/green"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/cancel_textview_choice"
                android:text="@string/cancel"
                android:textSize="30sp"
                android:textColor="@android:color/holo_red_dark"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>