<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp">

    <TextView
        android:textColor="@color/black"
        android:text="@string/sorry"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/leveluptext"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/ok_sorry"
        android:text="@string/ok"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="90dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#0B84E4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.cardview.widget.CardView>