<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/out_constraint"
    tools:context=".quiz.QuizQuestions">

    <include
        android:id="@+id/toolbar_add_question"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add_question">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/in_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".quiz.QuizQuestions">

            <EditText
                android:id="@+id/question_statement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:ems="10"
                android:textColorHint="@color/gray"
                android:hint="@string/Question"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <EditText
                android:id="@+id/option_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:textColorHint="@color/gray"
                android:hint="@string/opta"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/question_statement"
                app:layout_constraintStart_toStartOf="@+id/question_statement"
                app:layout_constraintTop_toBottomOf="@+id/question_statement" />

            <EditText
                android:id="@+id/opt_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:textColorHint="@color/gray"
                android:inputType="textPersonName"
                android:hint="@string/optb"
                app:layout_constraintEnd_toEndOf="@+id/option_1"
                app:layout_constraintStart_toStartOf="@+id/option_1"
                app:layout_constraintTop_toBottomOf="@+id/option_1" />
            <EditText
                android:id="@+id/option_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:textColorHint="@color/gray"
                android:hint="@string/optc"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/opt_2"
                app:layout_constraintStart_toStartOf="@+id/opt_2"
                app:layout_constraintTop_toBottomOf="@+id/opt_2" />

            <EditText
                android:id="@+id/opt_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/optd"
                android:textColorHint="@color/gray"
                app:layout_constraintEnd_toEndOf="@+id/option_3"
                app:layout_constraintStart_toStartOf="@+id/option_3"
                app:layout_constraintTop_toBottomOf="@+id/option_3" />

            <EditText
                android:id="@+id/ans"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColorHint="@color/gray"
                android:hint="@string/answer"
                app:layout_constraintEnd_toEndOf="@+id/opt_4"
                app:layout_constraintStart_toStartOf="@+id/opt_4"
                app:layout_constraintTop_toBottomOf="@+id/opt_4" />

            <Button
                android:id="@+id/add_question_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:text="@string/addtoquiz"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="80dp"
               app:layout_constraintTop_toTopOf="@+id/ans"
                app:layout_constraintEnd_toEndOf="@+id/ans"
                app:layout_constraintStart_toStartOf="@+id/ans" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>